--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container-404">
-        <img class="cameron-logo" src="/assets/cameron badge.png" alt="">
+        <img class="cameron-logo" src="https://assets.cammy.dev/cameron/assets/cameron%20badge.png" alt="">
         <h1>Coming Soon</h1>
         <h3>This website is still under development, and will be 
             published in 2023. Click here to follow on instagram --><a href="https://camdigitallabs.com/social">Cameron</a></h3>
