--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="cameron-logo" src="https://assets.cammy.dev/cameron/assets/cameron%20badge.png" alt="">
         <h1>Coming Soon</h1>
         <h3>This website is still under development, and will be 
-            published in 2023. Click here to follow on instagram --><a href="https://camdigitallabs.com/social">Cameron</a></h3>
+            published in 2023. Click here to follow on instagram --><a href="https://instagram.com/camdigitallabs"></a>@CamDigitalLabs</h3>
     </div>
 </body>
 </html>
