--- a/home.html
+++ b/home.html
@@ -14,15 +14,15 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <a href="/home.html">
+            <a href="/home">
                 <img src="/assets/cdl-2ndlogomark.png" class="logo">  
             </a>
              <nav>
                 <ul id="menuList">
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="/docs.html">Docs</a></li>
-                    <a href="/projects.html">
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/docs">Docs</a></li>
+                    <a href="/projects">
                         <button>Projects</button>
                     </a>
                 </ul>
@@ -39,10 +39,10 @@
                 </p>
                 <br>
                 <div class="learn-cta-1">
-                    <a href="/project/v-day-surprise.html">
+                    <a href="/project/v-day-surprise">
                     <button class="button-learn-more-1" type="button">View Projects</button> 
                     </a>
-                    <a class="docs-btn" href="/docs/v-day-surprise.html">Read Documentation</a>
+                    <a class="docs-btn" href="/docs/v-day-surprise">Read Documentation</a>
                 </div>
             </div>
             <div class="col-2">
@@ -52,15 +52,15 @@
     <br>
     <footer>
         <div class="footer">
-            <a href="/">
+            <a href="/home">
                 <img src="/assets/cdl-2ndlogomark.png" class="footer-logo">  
             </a>
              <div class="footer-nav">
                 <ul>
-                    <li><a href="/">About</a></li>
-                    <li><a href="/about">Contact</a></li>
-                    <li><a href="/contact">Projects</a></li>
-                    <li><a href="/initiatives">Docs</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/docs">Docs</a></li>
                 </ul>
              </div>
     </footer>
