--- a/project/v-day-surprise.html
+++ b/project/v-day-surprise.html
@@ -15,15 +15,15 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <a href="/home.html">
+            <a href="/home">
                 <img src="/assets/cdl-2ndlogomark.png" class="logo">  
             </a>
              <nav>
                 <ul id="menuList">
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="/docs.html">Docs</a></li>
-                    <a href="/projects.html">
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/docs">Docs</a></li>
+                    <a href="/projects">
                         <button>Projects</button>
                     </a>
                 </ul>
@@ -32,7 +32,7 @@
         </div>
         <div class="proposal-contanier">
             <div class="back-btn">
-                <a href="/projects.html">
+                <a href="/projects">
                     <img src="https://assets.cammy.dev/camcares/icons/arrow.svg" class="arrow"> Back
                 </a>
             </div>
@@ -71,15 +71,15 @@
             <br>
     <footer>
         <div class="footer">
-            <a href="/">
+            <a href="/home">
                 <img src="/assets/cdl-2ndlogomark.png" class="footer-logo">  
             </a>
              <div class="footer-nav">
                 <ul>
-                    <li><a href="/">About</a></li>
-                    <li><a href="/about">Contact</a></li>
-                    <li><a href="/contact">Projects</a></li>
-                    <li><a href="/initiatives">Docs</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/docs">Docs</a></li>
                 </ul>
              </div>
     </footer>
